feat: supports 1.8+ versions